chapter04/06_ingress/source/ingress-multiple-hosts.yaml
# Ingress API 버전: networking.k8s.io/v1
# Ingress 이름: snackbar
# Ingress 네임스페이스: snackbar
# Ingress 레이블: project=snackbar
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar 
  namespace: snackbar 
  labels:
    project: snackbar 
spec:
# Ingress defaultBackend 서비스 이름: home
# Ingress defaultBackend 서비스 포트: 80
  defaultBackend:
    service:
      name: home
      port: 
        number: 80
# IngressRule host 1: order.fast-snackbar.com
## HttpIngressRule: /로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: order
## Path /를 위한 backend 서비스 포트: 80
  rules: 
  - host: order.fast-snackbar.com
    http:
      paths:
      - pathType: Prefix 
        path: /
        backend: 
          service:
            name: order
            port: 
              number: 80
  - host: payment.fast-snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: payment
            port:
              number: 80
  - host: delivery.fast-snackbar.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: payment
            port:
              number: 80


# IngressRule host 2: payment.fast-snackbar.com
## HttpIngressRule: /로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: payment
## Path /를 위한 backend 서비스 포트: 80

# IngressRule host 3: delivery.fast-snackbar.com
## HttpIngressRule: /로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: delivery
## Path /를 위한 backend 서비스 포트: 80
