chapter04/06_ingress/source/ingress-single-host.yaml
# Ingress API 버전: networking.k8s.io/v1
# Ingress 이름: snackbar
# Ingress 네임스페이스: snackbar
# Ingress 레이블: project=snackbar
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snackbar
  namespace: snackbar
  labels:
    project: snackbar
spec:
  defaultBackend:
    service:
      name: home
      port: 
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /order
        backend:
          service:
            name: order
            port:
              number: 80
      - pathType: Prefix
        path: /payment
        backend:
          service:
            name: payment
            port:
              number: 80

# Ingress defaultBackend 서비스 이름: home
# Ingress defaultBackend 서비스 포트: 80

## HttpIngressRule: /order로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: order
## Path /를 위한 backend 서비스 포트: 80

## HttpIngressRule: /payment로 시작하는 모든 요청을 허용
## Path /를 위한 backend 서비스 이름: payment
## Path /를 위한 backend 서비스 포트: 80
